@startuml combined

state Article {
  state "Created" as C
  state "Edited" as E 
  state "Deleted" as D
  state loggedIn <<choice>>
  
  [*] --> loggedIn
  C --> loggedIn
  E --> loggedIn
  
  loggedIn --> C
  loggedIn --> D
  loggedIn --> E
  
  D --> loggedIn
  D --> [*]
}

state Category {
  state "Created" as cr
  state "Used" as us
  state "Unused" as un
  
  [*] --> cr
  
  cr --> us
  cr --> un
  
  us --> un
  us --> [*] : Removed
  
  un --> us
  un --> [*] : Removed
}

state Contributor {
  state "Not logged in" as N
  state "Logged in" as L

  [*] --> N
  
  N --> L
  
  L --> N
  L --> [*] : Inactive
}

state Search {
  state "Results" as R
  state "NoResults" as NR
  
  [*] --> R : Search
  [*] --> NR : Search
  
  R -left-> R : Search
  R -left-> NR : Search
  
  NR --> NR : Search
  NR --> R : Search
  
  R --> [*]
  NR --> [*]
}

[*] -right-> Article
[*] -right-> Category
[*] -right-> Contributor
[*] -right-> Search

Article --> Category
Article --> Contributor
Article --> Search
Article -right-> [*] : Leaves site

Category --> Article
Category --> Contributor
Category --> Search
Category -right-> [*] : Leaves site

Contributor --> Article
Contributor --> Category
Contributor --> Search
Contributor -right-> [*] : Leaves site

Search --> Article
Search --> Contributor
Search -right-> [*] : Leaves site

@enduml
